samples/_failures_safe/1761492983_7faaa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc460514.c: In function ‘main’:
./samples/SAFE/__tmp_cc460514.c:164:16: error: expected ‘)’ at end of input
  164 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_cc460514.c:164:5: error: expected declaration or statement at end of input
  164 |     if (len > 0
      |     ^~
